# NROS_SRC

./: .gitignore  CMakeLists.txt  main.cpp  main4.cpp  main_debug.cpp  main_record.cpp
include/: Singer.hpp  Thread.hpp  armor_detection.hpp  armor_prediction.h  armor_track.h  camera.h  energy_predict.h  energy_state.h  gimbal_control.h  kal_filter.hpp  number_DNN.h  robot_status.h
include/camera/: camera.h
other/: control_data.yaml  detect_data.yaml
src/: Singer.cpp  Thread.cpp  armor_detection.cpp  armor_prediction.cpp  armor_track.cpp  camera.cpp  energy_get.cpp  energy_predict.cpp  energy_state.cpp  gimbal_control.cpp  number_DNN.cpp  robot_status.cpp  serialport.cpp
tools/: monitor.sh  startup-run
